--- a/GeneralPurposeTelemetryProvider.csproj
+++ b/GeneralPurposeTelemetryProvider.csproj
@@ -73,6 +73,9 @@
     <Content Include="profiles\generalptp_General_Purpose_Telemetry_Provider_-_All_Controllers.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="sfx100-jg-input.py">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
